---- Changes since 1.400 ----
Keys in ACL sections are no long mangled by Webmin. This means that each IP or key must be entered on a separate line in the Access Control Lists page.
---- Changes since 1.410 ----
Corrected parsing of records in zone files with no names, which inherit from the previous record.
Spaces are now allowed in Host Information records.
---- Changes since 1.420 ----
The default TTL for multiple zones can now be changed on the Update Records in Zones page.
When adding a cluster slave server, multiple views can be entered to have slave zones created in all of them.
Record names or values entered like ns.foo.com in the domain foo.com automatically have a . added to make them absolute as the user presumably expected, rather than being coverted to ns.foo.com.foo.com.
Update serial number (by default) when editing records manually.
Try downloading root zone files from the IP for rs.internic.net if the hostname cannot be resolved, to avoid catch-22 problem.
Access control lists are now automatically re-ordered to handle dependencies.
When Webmin is not automatically converting records to canonical format for editing, display the canonical name on the Edit Record page.
When adding a cluster slave server, allow zones to be created in the same view on the slave as on the master.
Added a button to the Edit Master Zone page for checking records with the named-checkzone command.
---- Changes since 1.430 ----
Don't pass the -g flag to BIND version 9 when starting without an init script.
Converted all forms to use the Webmin UI library, for a more consistent look and easier theming.
Moved buttons for deleting, moving and converting zones up to the page shown when you click on a zone name.
Switched to the new root zone file available from Internic.
Restrictions that apply to all zones in a view (such as allowed IPs for transfers and queries) can now be set on the Edit Client View page.