@@ -19,7 +19,8 @@ $type = $zone->{'type'};
 $file = $zone->{'file'};
 $form = 0;
 if (!$access{'ro'} && $type eq 'master' && $in{'type'} ne 'ALL') {
-	&record_input($in{'index'}, $in{'view'}, $in{'type'}, $file, $dom);
+	&record_input($in{'index'}, $in{'view'}, $in{'type'}, $file, $dom,
+		      undef, undef, $in{'newname'}, $in{'newvalue'});
 	$form++;
 	$shown_create_form = 1;
 	}
