@@ -88,3 +88,4 @@ Converted all forms to use the Webmin UI library, for a more consistent look and
 Moved buttons for deleting, moving and converting zones up to the page shown when you click on a zone name.
 Switched to the new root zone file available from Internic.
 Restrictions that apply to all zones in a view (such as allowed IPs for transfers and queries) can now be set on the Edit Client View page.
+Made the Find Free IPs page visible, for finding addresses in a master zone that are not currently used.
